--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <label for="check" class="checkbtn">
           <i class="fa fa-bars" aria-hidden="true"></i>
         </label>
-        <label class="logo">Adventure Spirit</label>
+        <label class="logo">Bananas</label>
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="about_us.html">About</a></li>
