agregado sass y seo

--- a/about_us.html
+++ b/about_us.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About us</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/navbar.css">
+    <meta
+      name="description"
+      content="Aprendizaje de idiomas a distancia con opcion de viajar"
+    />
+
+    <meta
+      name="keywords"
+      content="Aprender, Idiomas, Viajar, Ingles, Frances, Aleman"
+    />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
@@ -29,28 +38,22 @@
             
         </ul>
     </nav>
-     <!--  <nav>
-        <ul id="navbarList">
-          <img id="logo" src="./img/pngwing.com.png" alt="logo" />
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="contacto.html">CONTACTOS</a></li>
-          <li><a href="about_us.html">ACERCA DE NOSOTROS</a></li>
-        </ul>
-      </nav> -->
     </header>
 
     <div id="cuadrado-aboutUs">
       <div class="acerca_de">
-        <h1>¿QUIENES SOMOS?</h1>
+        <h1 class="titulo_acerca_de">¿QUIENES SOMOS?</h1>
 
         <p>
           Somos un grupo de profesoras que creemos que el mundo es mejor cuando
-          las personas <br />
-          se intentan entender unas a otras. Desde 2015, hemos ayudado a
-          millones de personas a <br />
+          las personas
+          se intentan entender unas a otras. 
+          <br>
+          Desde 2015, hemos ayudado a
+          millones de personas a
           conocer nuevos lugares, tener nuevas experiencias culturales y
           aprender nuevas cosas <br />
-          sobre el mundo y sobre ellas mismas.
+          sobre el mundo y sobre ell@s mismas.
         </p>
 
         <br />
