--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Aprendizaje de idiomas a distancia con opcion de viajar"
+    />
+
+    <meta
+      name="keywords"
+      content="Aprender, Idiomas, Viajar, Ingles, Frances, Aleman"
+    />
+
     <title>Home</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="navbar.css" />
+    <link rel="stylesheet" href="./css/navbar.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -18,7 +28,6 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto:ital,wght@1,300&display=swap"
       rel="stylesheet"
     />
-    
   </head>
   <body>
     <header id="navbarContainer">
@@ -34,27 +43,6 @@
           <li><a href="contacto.html">Contact</a></li>
         </ul>
       </nav>
-      <!-- <nav class="navbar-menu">
-        
-        <a href="#" class="menu-button">
-          <span class="opciones"></span>
-          <span class="opciones"></span>
-          <span class="opciones"></span>
-        </a>
-
-
-
-
-        <div id="navbar-links">
-        <ul id="navbarList">
-          <img id="logo" src="./img/pngwing.com.png" alt="logo" /> 
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="contacto.html">CONTACTOS</a></li>
-          <li><a href="about_us.html">ACERCA DE NOSOTROS</a></li>
-        </ul>
-      </div>
-
-      </nav> -->
     </header>
     <br /><br /><br />
 
